--- a/sample/Dockerfile.aceonly
+++ b/sample/Dockerfile.aceonly
@@ -1,5 +1,5 @@
 FROM ace-de-only:latest
 
-WORKDIR /home/eidiko/Image/ace-docker/sample
+WORKDIR ${WORKSPACE}/sample/
 COPY bars_aceonly /home/aceuser/bars
 RUN ace_compile_bars.sh
