--- a/sample/Dockerfile.aceonly
+++ b/sample/Dockerfile.aceonly
@@ -1,5 +1,5 @@
 FROM ace-dev-only:latest
 
 
-COPY sample/bars_aceonly /home/aceuser/bars
+COPY bars_aceonly /home/aceuser/bars
 RUN ace_compile_bars.sh
