--- a/sample/Dockerfile.aceonly
+++ b/sample/Dockerfile.aceonly
@@ -1,8 +1,8 @@
 FROM ace-dev-only:latest
-
 USER root
-
-RUN mkdir /home/aceuser/bars && chown aceuser:aceuser /home/aceuser/bars
-chmod -R 777 /home/aceuser/bars
-COPY sample/bars_aceonly /home/aceuser/bars
+RUN mkdir /home/aceuser/bars
+RUN chown -R aceuser:mqbrkrs /home/aceuser/bars && chmod -R 777 /home/aceuser/bars 
+COPY sample/bars_aceonly /home/aceuser/bars 
+RUN chmod -R 777 /home/aceuser/bars && cd /home/aceuser/bars &&  ls -lrt
+USER aceuser
 RUN ace_compile_bars.sh
